v032/Readme.md
# ノベルゲーム v022-02

モバイル・PC対応のHTML5ベースノベルゲームエンジンです。  
JavaScriptによる完全同期演出、BGM/SE/ボイス再生、オートプレイ、選択肢分岐などに対応。  
特にモバイル縦画面では「最後に登場したキャラクターのみを全画面表示」する演出を実装済み。

---

## 📁 ディレクトリ構成
project-root/
├── assets2/
│ ├── bgev/ # 背景画像
│ ├── char/ # キャラクター画像
│ ├── bgm/ # BGM音源
│ ├── se/ # 効果音
│ └── voice/ # ボイス
└── v022/
├── index.html # UIレイアウト
├── style.css # レスポンシブ＆キャラ演出スタイル
├── script.js # セリフ制御＆演出同期処理
├── config.js # アセットパス設定
├── characterColors.js # キャラクターごとのセリフ色
├── characterStyles.js # キャラクターごとの表示スタイル（fontSize, speed）
├── effect.js # 背景＆キャラ表示演出
└── scenario/
├── 000start.json # 最初のシナリオ
└── *.json # 各シナリオファイル（選択肢分岐対応）

---

## 🔧 機能仕様

### ✅ 対応機能
- モバイル／PC 両対応（縦・横でレイアウト最適化）
- 背景・キャラクター表示切替（同期型演出）
- BGM / SE / ボイス再生（初回クリックで許可）
- オートプレイ（ダブルタップでON/OFF）
- 選択肢によるジャンプ分岐
- キャラクターごとのセリフ速度・フォントサイズ指定
- シナリオファイル上で `fontSize`, `speed` を個別指定可能（優先される）

---

## 📱 モバイル縦表示専用仕様

- 最後に表示されたキャラクターのみ `.active` を付与し、画面中央に表示
- `style.css` により、その他のキャラを非表示に
- キャラクター画像は画面下端に揃い、大きく表示

---

## 📜 シナリオファイル構成（例：000start.json）

```json
{
  "scenes": [
    {
      "bg": "bg001.png",
      "bgEffect": "fadein",
      "bgm": "main.mp3",
      "characters": [
        { "side": "left", "src": "a01002.png", "effect": "fadein" }
      ],
      "name": "緋奈",
      "text": "お腹すいた〜！",
      "voice": "h01.mp3",
      "fontSize": "1.4em",         // ← 明示的指定があると最優先
      "speed": 30                  // ← 明示的指定があると最優先
    },
    {
      "choices": [
        { "text": "パンケーキを食べる", "jump": "branchA.json" },
        { "text": "ラーメンを食べる", "jump": "branchB.json" }
      ]
    }
  ]
}
 アセット一覧
キャラクター
名前	ファイル名	特徴	色コード
緋奈	a01002.png	明るく楽しい、食いしん坊	#d3381c
藍	a02002.png	控えめでおとなしい	#0279e0
翠	a03002.png	真面目で敬語キャラ	#02b308
こがね	a04002.png	ギャル風、フランク	#FFF450
琥珀	a05002.png	元気なアスリート	#F68B1F

背景画像例
bg001.png：事務所

bg011.jpg：オフィス（昼）

bg020.jpg：自宅（昼）

🎵 音声仕様
音声（BGM/SE/ボイス）は Audio オブジェクトで再生

初回クリックにより音声再生の許可を取得（iOS対応）

🚀 オートプレイ仕様
ダブルタップで isAuto モード切替

セリフ送りは 2000ms 後に自動遷移

script.js にて管理

💡 注意点
音声再生はブラウザ仕様により ユーザーの操作が必要（クリックで初回解除済み）

モバイル縦のキャラ拡大演出は、最後に指定されたキャラのみ有効（他は非表示）

分岐後の scene.characters を正しく上書きしないと表示不整合が出るので注意

🔄 バージョン
v021-last：PCとモバイル対応、同期型演出

v022-01：モバイル縦1キャラ表示、レスポンシブ、初回音声解除対応

v022-02：縦→横→縦切替時の表示保持バグ修正、制御改善

📌 今後の改善アイデア
音声再生を完全に切り替える「サイレントモード」

キャラごとのアニメーション（CSS追加）

シナリオ用エディタの実装（JSON補助）